fix text alignment on mobile phone

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -67,7 +67,7 @@
     .about-container {
       flex-direction: column;
       align-items: center;
-      text-align: center;
+      text-align: left;
     }
   
     .about-photo img {
